minor fix request builder